<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.LoanStatusActivity">

    <TextView
        android:id="@+id/textview_loan_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/loanStatus"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_loan_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textview_loan_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_loan_amount_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="10,000 birr"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textview_loan_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loanDueDate"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_loan_due_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="3 Month"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endDate"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="30/10/2024"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textview_loan_status_details_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Approved"
                android:textColor="#00FF00"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_make_repayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="12dp"
        android:background="@color/design_default_color_secondary"
        android:text="@string/makeRepayment"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</androidx.appcompat.widget.LinearLayoutCompat>